--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    <title>Contact</title>
 </head>
 <body>
-    <h2>About</h2>
-    <p>welcome to about page</p>
+    <h2>Contact page</h2>
 </body>
 </html>
